Details
-
Bug
-
Status: Closed
-
Trivial
-
Resolution: Fixed
-
0.24
-
None
Description
Description of problem:
As Python client allows, C++ client should also take into account auto-delete x-declare option when declaring topic subscription.
Version-Release number of selected component (if applicable):
0.24 (and current upstream)
How reproducible:
100%
Steps to Reproduce:
qpid-receive -a "amq.direct/#; {link: {x-declare:
}}" -m 1 --print-content=no -f &
qpid-stat -q | egrep '(queue|=|direct)'
Actual results:
queue dur autoDel excl msg msgIn msgOut bytes bytesIn bytesOut cons bind
================================================================================================================================
amq.direct_19c89381-ace4-4871-85d6-c87f4462999a Y Y 0 0 0 0 0 0 1 2
(see the auxiliary subscription queue is auto-delete, despite we set it otherwise)
Expected results:
(non-auto-delete queue created)
Additional info: