QPID-5597: [C++ client] Topic subscriptions should not ignore auto-delete x-declare flag

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1574119 13f79535-47bb-0310-9956-ffa450edef68