cpp/src/qpid/client/amqp0_10/AddressResolution.cpp
@@ -245,6 +245,7 @@ class Subscription : public Exchange, public MessageSource
     const bool reliable;
     const std::string actualType;
     const bool exclusiveQueue;
+    const bool autoDeleteQueue;
     const bool exclusiveSubscription;
     const std::string alternateExchange;
     FieldTable queueOptions;
@@ -523,6 +524,7 @@ Subscription::Subscription(const Address& address, const std::string& type)
       reliable(durable ? !AddressResolution::is_unreliable(address) : AddressResolution::is_reliable(address)),
       actualType(type.empty() ? (specifiedType.empty() ? TOPIC_EXCHANGE : specifiedType) : type),
       exclusiveQueue((Opt(address)/LINK/X_DECLARE/EXCLUSIVE).asBool(true)),
+      autoDeleteQueue((Opt(address)/LINK/X_DECLARE/AUTO_DELETE).asBool(true)),
       exclusiveSubscription((Opt(address)/LINK/X_SUBSCRIBE/EXCLUSIVE).asBool(exclusiveQueue)),
       alternateExchange((Opt(address)/LINK/X_DECLARE/ALTERNATE_EXCHANGE).str())
 {
@@ -597,7 +599,7 @@ void Subscription::subscribe(qpid::client::AsyncSession& session, const std::str
 
     //create subscription queue:
     session.queueDeclare(arg::queue=queue, arg::exclusive=exclusiveQueue,
-                         arg::autoDelete=!(durable || reliable), arg::durable=durable,
+                         arg::autoDelete=autoDeleteQueue && (!(durable || reliable)), arg::durable=durable,
                          arg::alternateExchange=alternateExchange,
                          arg::arguments=queueOptions);
     //'default' binding:
